--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>calculator.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="calculator.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Icons\" />
